# magnesie-photogrammetry

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile-dev  MvgMvs_Pipeline.py  README.md  build.sh  dev.Dockerfile  get-power.sh  openmvgmvs.Dockerfile  run.sh  sensor_width_camera_database.txt
docs/: index.htm  search-index.js  source-files.js
docs/webservice/: fn.create_job.html  fn.index.html  fn.info_job.html  (+5 more)
webservice/: Cargo.toml  Rocket.toml  magnesie-photogrammetry.yaml
webservice/docs/implementors/core/marker/: trait.Sync.js  trait.Unpin.js
webservice/docs/src/webservice/: env.rs.html  job.rs.html
webservice/docs/src/webservice/job/: params.rs.html
webservice/docs/src/webservice/job/params/: response.rs.html
webservice/docs/webservice/: all.html  fn.main.html  fn.rocket_route_fn_index.html  fn.rocket_route_fn_info_job.html  sidebar-items.js  static.static_rocket_route_info_for_index.html
webservice/docs/webservice/env/: fn.check_env.html  sidebar-items.js
webservice/docs/webservice/job/: sidebar-items.js
webservice/docs/webservice/job/job/: enum.Status.html  index.html  struct.Job.html
webservice/docs/webservice/job/params/: index.html
webservice/docs/webservice/job/params/request/: index.html
webservice/docs/webservice/job/params/response/: sidebar-items.js  struct.CreateJobResponse.html
webservice/src/: env.rs  job.rs  main.rs  params.rs
webservice/src/job/: job.rs
webservice/src/job/params/: request.rs  response.rs
webservice/src/params/: job_create_request.rs  job_create_response.rs  job_info_response.rs
(+25 files in other folders)
