[package]
name = "webservice"
version = "0.1.0"
build = "build.rs"
authors = ["mgaonach"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = "0.19"
strum_macros = "0.19"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json","serve"]